RESOLVED FIXED 259848
Compositing overlap testing is broken with filters in some configurations
https://bugs.webkit.org/show_bug.cgi?id=259848
Summary Compositing overlap testing is broken with filters in some configurations
Simon Fraser (smfr)
Reported 2023-08-04 17:23:07 PDT
Created attachment 467201 [details] Test case Testcase shows a bug where overlap testing is incorrect but only if there's a blur filter on the element.
Attachments
Test case (670 bytes, text/html)
2023-08-04 17:23 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-04 17:23:27 PDT
Simon Fraser (smfr)
Comment 2 2023-08-04 17:23:52 PDT
This is about overlapBoundsIncludeChildren() in RenderLayer::overlapBounds().
Simon Fraser (smfr)
Comment 3 2023-08-07 11:11:25 PDT
EWS
Comment 4 2023-08-07 17:41:05 PDT
Committed 266669@main (2e1ca5ac8e80): <https://commits.webkit.org/266669@main> Reviewed commits have been landed. Closing PR #16446 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.