Cherry-pick 2e1ca5ac8e80. rdar://problem/113420795

Compositing overlap testing is broken with filters in some configurations
    https://bugs.webkit.org/show_bug.cgi?id=259848
    rdar://113420795

    Reviewed by Alan Baradlay.

    `RenderLayer::overlapBounds()` needs to return a rectangle which doesn't include the layer's own transform,
    since the caller applies the transform. However, if the layer has a filter that moves pixels (causing
    `overlapBoundsIncludeChildren()` to return true), then it used `defaultCalculateLayerBoundsFlags()`
    which includes `IncludeSelfTransform`.

    So pass a set of flags that cause the transform to be ignored.

    The tests exercise a filtered layer overlapping another layer, and other layers overlapping a filtered
    layer.

    This is part of a set of issues that affect reddit.com (rdar://112807737).

    * LayoutTests/compositing/layer-creation/overlap-transform-filter-contribution-expected.txt: Added.
    * LayoutTests/compositing/layer-creation/overlap-transform-filter-contribution.html: Added.
    * LayoutTests/compositing/layer-creation/overlap-transform-filter-expected.txt: Added.
    * LayoutTests/compositing/layer-creation/overlap-transform-filter.html: Added.
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::calculateClipRects const):
    * Source/WebCore/rendering/RenderLayerBacking.cpp:
    (WebCore::operator<<):

    Canonical link: https://commits.webkit.org/266669@main

Identifier: 265870.324@safari-7616.1.27.11-branch